--- a/Houston2022.html
+++ b/Houston2022.html
@@ -14626,9 +14626,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Photos-of-one,-relatively-ridiculous-interval,-16-October-2020">Photos of one, relatively ridiculous interval, 16 October 2020<a class="anchor-link" href="#Photos-of-one,-relatively-ridiculous-interval,-16-October-2020">&#182;</a></h2><h2 id="This-was-a-2K-cut-down-composed-of-a-1600-in-4:39-and-last-400-in-65s">This was a 2K cut-down composed of a 1600 in 4:39 and last 400 in 65s<a class="anchor-link" href="#This-was-a-2K-cut-down-composed-of-a-1600-in-4:39-and-last-400-in-65s">&#182;</a></h2><p><img src="W_keira_2020_01.png" width=700 />
+<h2 id="Photos-of-one,-relatively-ridiculous-interval,-16-October-2020">Photos of one, relatively ridiculous interval, 16 October 2020<a class="anchor-link" href="#Photos-of-one,-relatively-ridiculous-interval,-16-October-2020">&#182;</a></h2><h2 id="This-was-a-2K-cut-down-composed-of-a-1600-in-4:39-and-last-400-in-65s">This was a 2K cut-down composed of a 1600 in 4:39 and last 400 in 65s<a class="anchor-link" href="#This-was-a-2K-cut-down-composed-of-a-1600-in-4:39-and-last-400-in-65s">&#182;</a></h2><p><img src="W_keira_2020_01.PNG" width=700 />
 (photo, Anthony D'Amato)</p>
-<p><img src="W_keira_2020_02.png" width=700 />
+<p><img src="W_keira_2020_02.PNG" width=700 />
 (photo, Anthony D'Amato)</p>
 
 </div>
@@ -14657,19 +14657,19 @@ But I knew that everything, including some things outside my control, would need
 I'd sent Keira this screenshots of the NWS wind forecast about a week in advance, just letting her know to prepare mentally for challenging conditions. I personally already knew way more scientific / statisical information on the forecast and pace conversions at various speeds than I wanted to share with her at that point, so I kept the extra information to myself, haha.
 
 </code></pre>
-<p><img src="IMG_1273.jpg" width=400 />
+<p><img src="IMG_1273.JPG" width=400 />
 (screenshot from www.weather.gov, Silas Frantz)</p>
 
 <pre><code>The day before the race, we all met up to drive the course (Cal driving, me shotgun, Keira and Scott in the back seat). It was extremely windy, like 20MPH with 30-40MPH gusts - right around 0 chance we could have run the record on that day. The shake-out run I'd done that morning was probably one of the windiest runs I've ever done. But it felt great at the back, we knew it would die down some overnight, and we recognized that with the primary wind direction being (from the) Northwest, Keira would have a tailwind over the critical last 8 miles. Furthermore, the course was relatively well-protected against a northwest wind, with trees lining the course along some of the sections I was nervous about. As Cal put it, although you always lose time with increasing wind speed on a loop course, it would have been hard to design a course better suited to a northwest wind.
 
 </code></pre>
-<p><img src="IMG_1274.png" width=500 />
+<p><img src="IMG_1274.PNG" width=500 />
 (screenshot Houston M. race map, Silas Frantz)</p>
 
 <pre><code>At the same time as I was quite nervous about my first marathon and the job of taking the brunt of the wind for many miles while running 5:18's, I was enjoying the swanky hotel that the marathon committee had put us up in. It was a way nicer hotel than I'd ever put myself in, overlooked the start line, and had several dedicated conference suites where they served us (the elite athletes) free food, collected our bottles for positioning along the course, and held media operations.
 
 </code></pre>
-<p><img src="IMG_1310.jpeg" width=500 />
+<p><img src="IMG_1310.JPEG" width=500 />
 (photo, Silas Frantz)</p>
 
 <pre><code>After our drive, we met up for dinner in the ... food suite ... and relaxed a bit, chatted about the task ahead, etc., and took this photo together:
@@ -14681,7 +14681,7 @@ I'd sent Keira this screenshots of the NWS wind forecast about a week in advance
 <pre><code>After dinner I headed out for a night walk in my final effort to calm down before the race. This worked, and was the first point that week where I felt really good about our prospects for the next day. Everything that needed to happen in preparation had gone well, and the wind had died down a bit more than the forecast predicted. I couldn't feel much at all here, within the central business district where the start and finish of the race would be - it would just be tricky in the exposed portions of the race around the halfway point.
 
 </code></pre>
-<p><img src="IMG_1316.jpeg" width=500 />
+<p><img src="IMG_1316.JPEG" width=500 />
 (photo, Silas Frantz)</p>
 
 </div>
@@ -14775,13 +14775,13 @@ When I rounded the turn to the finish (@ 2 hrs 21 minutes), Keira had just picke
 These photos are really, really special. Even if the record goes down again soon, it's never going to change having experienced this moment, in the frigid cold, on totally messed up legs.
 
 </code></pre>
-<p><img src="r_3.jpg" width=700 />
+<p><img src="r_3.JPG" width=700 />
  (photo, friend of Calum Neff)</p>
-<p><img src="r_4.jpeg" width=700 />
+<p><img src="r_4.JPEG" width=700 />
  (photo, friend of Calum Neff)</p>
-<p><img src="r_5.jpeg" width=700 />
+<p><img src="r_5.JPEG" width=700 />
  (photo, friend of Calum Neff)</p>
-<p><img src="r_6.jpeg" width=700 />
+<p><img src="r_6.JPEG" width=700 />
  (photo, friend of Calum Neff)</p>
 
 <pre><code>Fun fact, neither Cal or I are actually US citizens. He's Canadian, and I'm German, but I'm glad I had on my American flag sunglasses for these photos. Keira gave these to me and Emily as a gift some years ago.</code></pre>
