--- a/Houston2022.html
+++ b/Houston2022.html
@@ -14725,7 +14725,7 @@ I'd sent Keira this screenshots of the NWS wind forecast about a week in advance
 This photo was taken just after that split off, I believe somewhere around mile 9 or 10. These are really good photos - one of Cal's friends from in town is a professional photographer, and should be credited with these but I dont know his (?) name.
 
 </code></pre>
-<p><img src="r_0.jpeg" width=700 />
+<p><img src="r_0.JPEG" width=700 />
  (photo, friend of Calum Neff)</p>
 
 <pre><code> Many of the athletes who traveled over from East Africa for the race (where it would have been summer), struggled in the cold and windy conditions. I havent checked if this is true, but we assumed that the woman running with our group at this point was last year's champion. She fell off our pace a mile or so after this photo was taken, and we continued trying to run together with some groups of men.
@@ -14746,9 +14746,9 @@ This photo was taken just after that split off, I believe somewhere around mile 
  In terms of the pace to this point, I was feeling extremely good, almost like it was easy. I started running next to Keira, to reinforce that she was running strong through this new stage of the race, and since blocking headwind was no longer an issue. A short while after we emerged from the famous tunnels on the course, these photos were taken:
 
 </code></pre>
-<p><img src="r_1.jpeg" width=700 />
+<p><img src="r_1.JPEG" width=700 />
  (photo, friend of Calum Neff)</p>
-<p><img src="r_2.jpeg" width=700 />
+<p><img src="r_2.JPEG" width=700 />
  (photo, friend of Calum Neff)</p>
 
 <pre><code>These are somewhat amusing photos for me to look back on now -- they were taken around mile 22 or 23, just after I realized that something was going strangely wrong inside my body, and my last-ditch emergency gel, the dreaded chocolate caffeinated Gu, is in my right hand. But the coolest part about these photos is that Keira looks like she's feeling better than either of us, for the first time. You can kind of predict will transpire over the finishing miles.
