--- a/Houston2022_01.html
+++ b/Houston2022_01.html
@@ -14698,13 +14698,13 @@ I'd sent Keira this screenshots of the NWS wind forecast about a week in advance
 <pre><code>We were carted over to the race on various buses, and had a police motorcade - it was still dark, and felt like we were heading to the start line of a big olympic race!
 
 </code></pre>
-<p><img src="IMG_1325.jpeg" width=500 />
+<p><img src="IMG_1325.JPEG" width=500 />
 (photo, Silas Frantz)</p>
 
 <pre><code>Being on the same bus, Cal and I hung out together there and in the elite athlete tent for most of the two hours leading into the race, although I also got to warm up with Keira along the 400m stretch along the start that they allocated to us for warm-ups. This was a really helpful experience for me to get to ask Cal every random question I had while in the tent - a bunch of the other athletes were passing around a committee-provided tub of vaseline, I was like Cal, what's with the tub of lube? Where should I stash my gels? How tight should I tie my shoes? Etc, lol
 
 </code></pre>
-<p><img src="IMG_1331.jpeg" width=500 />
+<p><img src="IMG_1331.JPEG" width=500 />
 (photo, Silas Frantz)</p>
 
 <pre><code>The three of us shared a hug and a "you got this" on the start line in the minute or so before the start gun went off. It was very cold, standing around after stripping off our warm-up gear.</code></pre>
