--- a/Houston2022.html
+++ b/Houston2022.html
@@ -14768,7 +14768,7 @@ Within a mile or so of these photos, I went from hero to zero, said "I know you'
 <h4 id="Finish">Finish<a class="anchor-link" href="#Finish">&#182;</a></h4>
 <pre><code>The last 2 miles of the race were a unique experience. I slowed to a jog that I felt must be 10 minute pace. In reality I was still running like 6:10's. In the last mile, one of the runners we'd packed up with early in the race went past me, and I joined him at 5-something pace for a minute or so before my hamstring seized up and I stopped to stretch.
 
-Stopping to take that stretch a few-100 meters from the finish, some of the fans around me started yelling "dude what are you doing - you're basically there", to which I replied "leave me the fuck alone, my body my rights!"
+Stopping to take that stretch a few-100 meters from the finish, some of the fans around me started yelling "dude what are you doing - you're basically there", to which I replied "nope - i'm in charge here!"
 
 When I rounded the turn to the finish (@ 2 hrs 21 minutes), Keira had just picked up the American flag to start her victory lap. I figured immediately that she had put together the performance of her career over those last 2 miles, and had dipped under the old American record, by however much. After I crossed the line, I turned back and we all celebrated, with Keira mostly in disbelief, as to what she had just accomplished.
 
